--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
+.josefin-sans {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.josefin-sans-light {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 300; 
+}
+
+.inter {
+  font-family: 'Inter', sans-serif;
+}
+
 :root {
   font-family: Inter;
   line-height: 1.5;
