--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,17 @@
   font-family: 'Inter', sans-serif;
 }
 
+.titles-style{
+  color: #000;
+text-align: center;
+font-feature-settings: 'clig' off, 'liga' off;
+font-family: "Josefin Sans";
+font-size: 32px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
+
 :root {
   font-family: Inter;
   line-height: 1.5;
@@ -43,6 +54,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
 
 button {
   border-radius: 8px;
